--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Pluralsight Administration</title>
-</head>
-<body>
-<div id="app"></div>
-
-</body>
+	<head>
+		<title>Pluralsight Administration</title>
+	</head>
+	<body>
+		<div id="app"></div>
+		<script type="text/javascript" src="scripts/bundle.js"></script>
+	</body>
 </html>
