--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,12 @@
 <html>
 	<head>
 		<title>Pluralsight Administration</title>
+		<link rel="stylesheet" href="css/bundle.css"/>
 	</head>
 	<body>
+		<div class="jumbotron">
+			<h1>Hello, world, from Bootstrap</h1>
+		</div>
 		<div id="app"></div>
 		<script type="text/javascript" src="scripts/bundle.js"></script>
 	</body>
